backgrounds and box-shadows on images

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
   <div class="container">
     <div class="column left" >
-    <h1>Carlo Tarabbo</h1>
+    <h1 style="font-size: 4vw; margin: 1vw ; background-image: url(./media/2.png);">.carlo.tarabbo = [ ] </h1>
     <!-- container tag con image e decorazioni ai lati(?) -->
-    <h2 id="about-me">About me</h2>
+    <h2 id="about-me" style="background-image: url(./media/aaa.png);">About me</h2>
     <p>My name is Carlo Tarabbo, and I am currently a computer science student at the University of Pisa.<br>Throughout my
     academic and personal endeavors, I have found myself straddling the worlds of science, technology and art, where
     the realms of maths, ones and zeros converge with the strokes of a paintbrush.</p>
@@ -36,19 +36,20 @@
     <h2 id="code">.coding&#95projects( )</h2>
     <div class="clockwrapper">
       <div class="iframe-container">
-        <iframe src="https://modulartextwatch-normalset.netlify.app/"></iframe>
+        <iframe id="clock" src="https://modulartextwatch-normalset.netlify.app/"></iframe>
       </div>
     </div>
-    <h3>.flowfield( )</h3>
+    <h3 style="background-image: url(./media/download\ \(15\).png);">.flowfield( )</h3>
     <div class="flowfieldWrapper" style="background-color: black; margin:0 ; padding : 0; overflow: hidden;">
       <canvas id="canvas1" style="width: 40vw ; height: 40vw;"></canvas>
     </div>
     <!--todo htmlcss interactive wave manimulator controls under it -->
 
-    <!--todo clock -->
     <!--todo python fractal generator -->
-    <h2 id="contacts">.contacts( )</h2>
     <!--todo contacts -->
+        <h2 id="contacts" style="background-image: url(./media/fractal1.png)">.contacts( )</h2>
+
+
     </div>
 
 
@@ -75,7 +76,7 @@
 
 
     <div class="column right">
-    <h1 style="font-size: 6vw; text-align: right; background-image: url(./media/wavesWhite.png);">normalset.</h1>
+    <h1 style="font-size: 6vw; text-align: right; background-image: url(./media/wavesWhite.png); margin: 1vw;">normalset.</h1>
     <h2 id="canvas">finding a canvas in both worlds</h2>
     <h2 id="passion">a passion for turning ideas into reality</h2>
     <h2 id="portfolio">digital portfolio</h2>
@@ -84,17 +85,18 @@
     </section>
     <h2 id="commissions">commissions</h2>
       <div>
-        <img src="./media/drawings/lostfaith.png" style="width: 45vw;  padding: 1vw ;">
-        <img src="./media/drawings/temperance.png" style="width: 45vw; padding: 1vw ;">
+        <img class="lostfaith" src="./media/drawings/lostfaith.png">
+        <img class="temperance" src="./media/drawings/temperance.png">
       </div>
 
       <h2 id="shop">shop</h2>
-      <div class="clockwrapper">
+      <!-- <div class="clockwrapper">
         <div class="iframe-container">
           <iframe src="https://normalset.creator-spring.com/" style="padding: 1vw"></iframe>
         </div>
-      </div>
+      </div> -->
     </div> <!--colright-->
+    <br>
   </div> <!--close container-->
   
 
