added test borders to left col text

--- a/index.html
+++ b/index.html
@@ -17,22 +17,30 @@
     <div class="column left" >
     <h1 style="font-size: 4vw; margin: 1vw ; background-image: url(./media/2.png);">.carlo.tarabbo = [ ] </h1>
     <!-- container tag con image e decorazioni ai lati(?) -->
-    <h2 id="about-me" style="background-image: url(./media/aaa.png);">About me</h2>
+    <div class="col-text-container">
+      <h2 id="about-me" style="background-image: url(./media/aaa.png);">About me</h2>
     <p>My name is Carlo Tarabbo, and I am currently a computer science student at the University of Pisa.<br>Throughout my
     academic and personal endeavors, I have found myself straddling the worlds of science, technology and art, where
     the realms of maths, ones and zeros converge with the strokes of a paintbrush.</p>
-    <h2 id="patterns" style="background-image: url(./media/fractal1.png);">a love for geometric patterns</h2>
+    </div>
+
+    <div class="col-text-container">
+      <h2 id="patterns" style="background-image: url(./media/fractal1.png);">a love for geometric patterns</h2>
     <p>At the core of my interests lies a deep appreciation for geometric patterns and mathematics. The precision and order in
     geometric patterns resonate with my scientific and research-oriented side, where I love to delve into the intricacies of
     structured designs. Simultaneously, the freedom and fluidity of art, where nothing is constrained by rigid boundaries,
     allow my creative side to flourish. Whether it's within a structured algorithm or a burst of artistic inspiration,
     geometric patterns play a central role in my journey.</p>
-    <h2 id="past-present" style="background-image: url(./media/download.png);">current focus and looking forward</h2>
+    </div>
+    <div class="col-text-container">
+      <h2 id="past-present" style="background-image: url(./media/download.png);">current focus and looking forward</h2>
     <p>Currently, my main interests revolve around web design and a touch of game design. The dynamic nature of the web and the
     immersive experience of gaming intrigue me, and I'm excited to explore these fields further. Looking ahead, I have a
     strong desire to expand my horizons. Learning a new language, delving into the intricate world of cryptography for its
     pattern-making and matching properties, and honing my skills in web design and front-end development are all on my list
     of aspirations.</p>
+    </div>
+    
     <h2 id="code">.coding&#95projects( )</h2>
     <div class="clockwrapper">
       <div class="iframe-container">
