--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
 
   <title>Document</title>
 </head>
 <body>
   <div class="container">
     <div class="column left" >
-    <h1 style="font-size: 4vw; margin: 1vw ; background-image: url(./media/2.png);">.carlo.tarabbo = [ ] </h1>
+    <h1 style="font-size: 2.5vw; margin: 1vw ; background-image: url(./media/2.png);">.carlo.tarabbo =
+      [] </h1>
     <!-- container tag con image e decorazioni ai lati(?) -->
     <h2 id="about-me" style="background-image: url(./media/aaa.png);">About me</h2>
-    <p>My name is Carlo Tarabbo, and I am currently a computer science student at the University of Pisa.<br>Throughout my
+    <p>My name is Carlo Tarabbo, and I'm currently a computer science student at the University of Pisa.<br>Throughout my
     academic and personal endeavors, I have found myself straddling the worlds of science, technology and art, where
     the realms of maths, ones and zeros converge with the strokes of a paintbrush.</p>
     <h2 id="patterns" style="background-image: url(./media/fractal1.png);">a love for geometric patterns</h2>
