--- a/index2.html
+++ b/index2.html
@@ -72,7 +72,7 @@
       <h2 id="code">.coding&#95projects( )</h2>
       <div class="clockwrapper">
         <div class="iframe-container">
-          <iframe id="clock" src="https://modulartextwatch-normalset.netlify.app/"></iframe>
+          <!-- <iframe id="clock" src="https://modulartextwatch-normalset.netlify.app/"></iframe> -->
         </div>
       </div>
       <h3 style="font-size: 1.6vw; margin: 1vw; background-image: url(./media/download\ \(15\).png);">.flowfield( )</h3>
@@ -102,8 +102,8 @@
       <div class="centered-text" id="centeredText2" style="font-size: 3.3vw;">
         <a class="anchorBarLink" href="">shop</a>
         <a class="anchorBarLink" href="">commissions</a>
-        <a class="anchorBarLink" href="">digital portfolio</a>
-        <a class="anchorBarLink" href="">ideas > reality</a>
+        <a class="anchorBarLink" href="">background-color</a>
+        <a class="anchorBarLink" href="">black and white</a>
         <a class="anchorBarLink" href="">a canvas in both worlds </a>
       </div>
     </section>
@@ -113,12 +113,16 @@
       <h1 style="font-size: 3.8vw; text-align: right; background-image: url(./media/wavesWhite.png); margin: 1vw;">
         normalset.</h1>
       <h2 id="canvas">finding a canvas in both worlds</h2>
-      <div class="main_gallery" id="gallery"></div>
-      <h2 id="passion">a passion for turning ideas into reality</h2>
-      <h2 id="portfolio">digital portfolio</h2>
-      <section class="gallery" id="photo-gallery">
+      <h2 id="blackandwhite">black and white</h2>
+      <div class="gallery bw_gallery" id="gallery"></div>
+      <a id="blackanwhite_anchor"></a>
+      
+      <h2 id="color">color</h2>
+      <a id="color_anchor"></a>
 
-      </section>
+      <div class="gallery color_gallery" id="gallery"></div>
+
+      
       <h2 id="commissions">commissions</h2>
       <div>
         <img class="lostfaith" src="./media/drawings/lostfaith.png">
@@ -138,7 +142,6 @@
   
   <script src="scrollabeAnchors.js"></script>
   <script src="./flowfield/flowfield.js"></script>
-  <script src="./shufflePhotos.js"></script>
   <script src="./gallerySizeRandomizer.js"></script>
 
 </body>
