color gallery update

--- a/index2.html
+++ b/index2.html
@@ -72,7 +72,7 @@
       <h2 id="code">.coding&#95projects( )</h2>
       <div class="clockwrapper">
         <div class="iframe-container">
-          <!-- <iframe id="clock" src="https://modulartextwatch-normalset.netlify.app/"></iframe> -->
+          <iframe id="clock" src="https://modulartextwatch-normalset.netlify.app/"></iframe>
         </div>
       </div>
       <h3 style="font-size: 1.6vw; margin: 1vw; background-image: url(./media/download\ \(15\).png);">.flowfield( )</h3>
@@ -113,17 +113,20 @@
       <h1 style="font-size: 3.8vw; text-align: right; background-image: url(./media/wavesWhite.png); margin: 1vw;">
         normalset.</h1>
       <h2 id="canvas">finding a canvas in both worlds</h2>
+
+      <!-- black and white gallery -->
       <h2 id="blackandwhite">black and white</h2>
       <div class="gallery bw_gallery" id="gallery"></div>
       <a id="blackanwhite_anchor"></a>
       
+      <!-- color -->
       <h2 id="color">color</h2>
       <a id="color_anchor"></a>
-
       <div class="gallery color_gallery" id="gallery"></div>
 
       
       <h2 id="commissions">commissions</h2>
+      <a id="commission_anchor"></a>
       <div>
         <img class="lostfaith" src="./media/drawings/lostfaith.png">
         <img class="temperance" src="./media/drawings/temperance.png">
@@ -146,8 +149,4 @@
 
 </body>
 
-<<<<<<< HEAD
 </html>
-=======
-</html>
->>>>>>> 7aacfbb54b4f9946228e4730e2db01d6cdccb52b
