--- a/index2.html
+++ b/index2.html
@@ -70,6 +70,7 @@
         > C 
       </p>
       <h2 id="code">.coding&#95projects( )</h2>
+      <a href="https://modulartextwatch-normalset.netlify.app/"><h3 style="font-size: 1.6vw; margin: 1vw; background-image: url(./media/download\ \(15\).png);">.modular_textwatch</h3></a>
       <div class="clockwrapper">
         <div class="iframe-container">
           <iframe id="clock" src="https://modulartextwatch-normalset.netlify.app/"></iframe>
