fixed scrollable bar

--- a/index.html
+++ b/index.html
@@ -101,11 +101,10 @@
 
     <section class="column middle" style="transform: rotateZ(180deg); background-image: url(./media/wave.png);">
       <div class="centered-text" id="centeredText2" style="font-size: 3.3vw;">
-        <a class="anchorBarLink" href="">shop</a>
-        <a class="anchorBarLink" href="">commissions</a>
-        <a class="anchorBarLink" href="">background-color</a>
-        <a class="anchorBarLink" href="">black and white</a>
-        <a class="anchorBarLink" href="">a canvas in both worlds </a>
+        <a class="anchorBarLink" href="#shop">shop</a>
+        <a class="anchorBarLink" href="#color">commissions</a>
+        <a class="anchorBarLink" href="#blackandwhite">black and white</a>
+        <a class="anchorBarLink" href="#canvas">a canvas in both worlds </a>
       </div>
     </section>
 
