--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
         > C 
       </p>
       <h2 id="code">.coding&#95projects( )</h2>
+
+      <a href="https://portfolio-normalset.netlify.app/"><h3 style="font-size: 1.6vw; margin: 1vw; background-image: url(./media/download\ \(15\).png);">.novel_dl()</h3></a>
+
       <a href="https://modulartextwatch-normalset.netlify.app/"><h3 style="font-size: 1.6vw; margin: 1vw; background-image: url(./media/download\ \(15\).png);">.modular_textwatch</h3></a>
       <div class="clockwrapper">
         <div class="iframe-container">
