--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <br><br>
         > y : 20
         <br><br>
-        > Status: computer science student at the University of Pisa, 2nd year.
+        > Status: computer science student at the University of Pisa, 3rd year.
       </p>
 
       <h2 id="contacts" style="background-image: url(./media/fractal1.png)">.contacts( )</h2>
