--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
       <p>
         -- topics --
         <br>
-        > web design
+        > computer graphics & game design
         <br>
-        > game design
+        > cryptography
         <br>
         > generative algorithms
         <br>
@@ -67,6 +67,8 @@
         > python
         <br>
         > C 
+        <br>
+        > Java
       </p>
       <h2 id="code">.coding&#95projects( )</h2>
 
